--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -13,14 +13,22 @@
     --colour-grey: hsla(0, 0%, 43%, 100%);
     --colour-light-grey: hsla(0, 0%, 0%, 15%);
     --colour-orange: hsla(6, 95%, 59%, 100%);
+    --colour-light-orange: hsla(6, 95%, 59%, 90%);
     --colour-blue: hsla(228, 52%, 54%, 100%);
 
     --background-colour: var(--colour-off-white);
     --text-colour: var(--colour-grey);
     --text-colour-dark: var(--colour-black);
+    --text-colour-light: var(--colour-white);
     --border-colour: var(--colour-light-grey);
     --main-accent-colour: var(--colour-orange);
+    --main-accent-colour-light: var(--colour-light-orange);
     --secondary-accent-colour: var(--colour-blue);
+}
+
+::selection {
+    background-color: var(--main-accent-colour);
+    color: var(--background-colour);
 }
 
 html {
@@ -30,16 +38,7 @@ html {
 }
 
 body {
-    max-width: 760px;
-    margin: 6.25rem auto 0 auto;
-
-    min-height: calc(90vh);
-    display: flex;
-    flex-direction: column;
-}
-
-main {
-    flex-grow: 1;
+    margin: 0;
 }
 
 a {
@@ -49,38 +48,4 @@ a {
         color: var(--main-accent-colour);
         text-decoration: unset;
     }
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    margin-bottom: 6.25rem;
-}
-.nav-links {
-    display: flex;
-    gap: 1.25rem;
-    margin: 0 0 0 auto;
-
-    & a {
-        text-underline-offset: 0.2em;
-    }
-}
-
-footer {
-    margin-top: auto;
-    display: flex;
-    border-top: 1px solid var(--border-colour);
-    padding-top: 1.25rem;
-
-    & div {
-        display: flex;
-        gap: 0.5rem;
-    }
-
-    & a {
-        text-decoration: none;
-    }
-}
-.made-by-link {
-    margin: 0 0 0 auto;
 }
