--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -3,6 +3,7 @@
     align-items: center;
     border-bottom: 1px solid var(--border-colour);
     padding-bottom: 0.625rem;
+    margin-bottom: 0.625rem;
 
     & p {
         margin: 0;
@@ -20,15 +21,32 @@ ul {
 }
 
 li {
-    display: flex;
-    margin-top: 0.9rem;
+    padding: 0 0.5rem;
+    margin: 0 -0.5rem 0 -0.5rem;
+    border: 1px solid var(--background-colour);
 }
+
 li a {
+    display: flex;
+    align-items: center;
     text-decoration: unset;
     color: var(--text-colour-dark);
+
+    padding: 0.5rem;
+    margin: 0 -0.5rem 0 -0.5rem;
+    border: 1px solid var(--background-colour);
+
+    & time {
+        color: var(--text-colour);
+        font-size: 0.875rem;
+        margin: 0 0 0 auto;
+    }
 }
-li time {
-    margin: 0 0 0 auto;
+li a:hover, li a:focus {
+    background-color: white;
+    border-radius: 8px;
+    border-color: var(--border-colour);
+    outline: unset;
 }
 
 .no-collection-message {
